[pulse] only disable LG HDMI sink on desktop machine

--- a/dot_config/private_pulse/default.pa.tmpl
+++ b/dot_config/private_pulse/default.pa.tmpl
@@ -3,4 +3,6 @@
 load-module module-switch-on-connect
 
 # Disable the unused HDMI audio sink in my LG display.
+{{ if eq .chezmoi.hostname "sam-desktop" }}
 set-card-profile alsa_card.pci-0000_09_00.1 off
+{{ end }}
